finally fixed that wrapping situation with overflow auto

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body{
   margin: 0;
   padding: 0;
   background: #1c1c1c;
+  font-size: 15px;
 }
 
 .showButton{
