--- a/src/components/Thread.css
+++ b/src/components/Thread.css
@@ -8,6 +8,7 @@ body{
   padding: 10px;
   margin: 20px;
   border-bottom: 2px solid gray;
+  width: 90vw;
 }
 
 
